# c2pa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  cfileinfo.cpp  clexer.cpp  clexer.h  cpreprocessor.cpp  cpreprocessor.h  ctoken.cpp  ctoken.h  predefined.h
test/: CMakeLists.txt  basicTest.cpp
test/cases/: 000_temp.c  001_helloworld.c
tools/: coverage.sh
